Update masters to remove collect and share services
Collecting IPs and sharing via /etc/hosts is no longer necessary,
now that the `auto_namer` Lambda is in place to add DNS records.

This also includes having kubeadm generate certificates for etcd,
so that if the naming changes, the certs will be signed for the
new names as well. It also makes certificate rotation much easier,
as it will happen automatically on stack updates.

--- a/keights/resources/usr/lib/systemd/system/keights-templatize-etcd.service
+++ b/keights/resources/usr/lib/systemd/system/keights-templatize-etcd.service
@@ -1,24 +1,35 @@
 [Unit]
 Description=keights-templatize-etcd service
-Requires=keights-collector.service
-After=keights-collector.service
 
 [Service]
 Type=simple
 # Environment=AWS_REGION=
-# Environment=KEIGHTS_DOMAIN=
+# Environment=KEIGHTS_ETCD_DOMAIN=
 # Environment=KEIGHTS_ETCD_CLUSTER_TOKEN=
 # Environment=KEIGHTS_ETCD_IMAGE=
 # Environment=KEIGHTS_PREFIX=
+# Environment=KEIGHTS_AZS=
 ExecStartPre=/usr/bin/systemd-tmpfiles --create --prefix /etc/kubernetes
-ExecStart=/usr/bin/keights template \
-            -i /run/keights-collector/asg \
-            -t /usr/share/keights/etcd.yaml.template \
-            -D /etc/kubernetes/manifests/etcd.yaml \
-            -v EtcdImage=${KEIGHTS_ETCD_IMAGE} \
-            -v Prefix=${KEIGHTS_PREFIX} \
-            -v Domain=${KEIGHTS_DOMAIN} \
-            -v EtcdClusterToken=${KEIGHTS_ETCD_CLUSTER_TOKEN}
+ExecStart=/bin/sh -c ' \
+    myaz=`curl -s \
+            --retry 10 \
+            --retry-delay 2 \
+            http://169.254.169.254/latest/meta-data/placement/availability-zone` && \
+    myip=`curl -s \
+            --retry 10 \
+            --retry-delay 2 \
+            http://169.254.169.254/latest/meta-data/local-ipv4` && \
+    /usr/bin/keights template \
+      -t /usr/share/keights/etcd.yaml.template \
+      -D /etc/kubernetes/manifests/etcd.yaml \
+      -v EtcdImage=${KEIGHTS_ETCD_IMAGE} \
+      -v Prefix=${KEIGHTS_PREFIX} \
+      -v EtcdDomain=${KEIGHTS_ETCD_DOMAIN} \
+      -v EtcdClusterToken=${KEIGHTS_ETCD_CLUSTER_TOKEN} \
+      -v AZs=${KEIGHTS_AZS} \
+      -v MyAZ=$${myaz} \
+      -v MyIP=$${myip} \
+'
 
 [Install]
 RequiredBy=keights-templates.target
