--- a/stack/cloudformation/node.yml
+++ b/stack/cloudformation/node.yml
@@ -60,6 +60,7 @@ Resources:
   AutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
+      AutoScalingGroupName: !Ref AWS::StackName
       LaunchConfigurationName: !Ref LaunchConfiguration
       MinSize: !Ref MinInstances
       MaxSize: !Ref MaxInstances
@@ -83,6 +84,7 @@ Resources:
   LaunchConfiguration:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
+      LaunchConfigurationName: !Ref AWS::StackName
       IamInstanceProfile: !Ref NodeInstanceProfile
       ImageId: !Ref ImageId
       InstanceType: !Ref InstanceType
