--- a/keights/resources/usr/lib/systemd/system/keights-templatize-kubeadm-config.service
+++ b/keights/resources/usr/lib/systemd/system/keights-templatize-kubeadm-config.service
@@ -1,31 +1,41 @@
 [Unit]
 Description=keights-templatize-kubeadm-config service
-Requires=keights-collector.service keights-whisper-controller.service
-After=keights-collector.service keights-whisper-controller.service
+Requires=keights-whisper-controller.service
+After=keights-whisper-controller.service
 
 [Service]
 Type=simple
 # Environment=AWS_REGION=
 # Environment=KEIGHTS_DOMAIN=
+# Environment=KEIGHTS_ETCD_DOMAIN=
 # Environment=KEIGHTS_PREFIX=
 # Environment=KEIGHTS_APISERVER=
 # Environment=KEIGHTS_POD_SUBNET=
 # Environment=KEIGHTS_SERVICE_SUBNET=
 # Environment=KEIGHTS_IMAGE_REPOSITORY=
 # Environment=KEIGHTS_KUBERNETES_VERSION=
+# Environment=KEIGHTS_AZS=
 ExecStartPre=/usr/bin/systemd-tmpfiles --create --prefix /var/lib/kubeadm
 ExecStart=/bin/sh -c ' \
     while true; do \
-      [ -f /run/keights-collector/asg -a -f /run/kubernetes/bootstrap-token ] && break; \
+      [ -f /run/kubernetes/bootstrap-token ] && break; \
       sleep 1; \
     done && \
     node_name=`hostname -f` && \
     token=`cat /run/kubernetes/bootstrap-token` && \
+    myaz=`curl -s \
+            --retry 10 \
+            --retry-delay 2 \
+            http://169.254.169.254/latest/meta-data/placement/availability-zone` && \
+    myip=`curl -s \
+            --retry 10 \
+            --retry-delay 2 \
+            http://169.254.169.254/latest/meta-data/local-ipv4` && \
     /usr/bin/keights template \
-      -i /run/keights-collector/asg \
       -t /usr/share/keights/kubeadm-config.yaml.template \
       -D /var/lib/kubeadm/config.yaml \
       -v Domain=${KEIGHTS_DOMAIN} \
+      -v EtcdDomain=${KEIGHTS_ETCD_DOMAIN} \
       -v Prefix=${KEIGHTS_PREFIX} \
       -v APIServer=${KEIGHTS_APISERVER} \
       -v PodSubnet=${KEIGHTS_POD_SUBNET} \
@@ -34,6 +44,9 @@ ExecStart=/bin/sh -c ' \
       -v Token=$${token} \
       -v ImageRepository=${KEIGHTS_IMAGE_REPOSITORY} \
       -v KubernetesVersion=${KEIGHTS_KUBERNETES_VERSION} \
+      -v AZs=${KEIGHTS_AZS} \
+      -v MyAZ=$${myaz} \
+      -v MyIP=$${myip} \
 '
 
 [Install]
