Update to run Kubernetes 1.11
Most of the changes for Kubernetes 1.11 focus on removing the
static pod manifest for etcd, and allowing kubeadm to handle that.
The kubeadm init config file has been expanded to specify the
options that should be passed to etcd, as well as updates to the
kubelet configuration. The kubelet configuration is mostly
handled by kubeadm now, so most of the options that were formerly
passed in the systemd dropin have been removed.

--- a/keights/resources/usr/lib/systemd/system/keights-kubeadm-join.service
+++ b/keights/resources/usr/lib/systemd/system/keights-kubeadm-join.service
@@ -18,7 +18,12 @@ ExecStart=/bin/sh -c ' \
                     openssl rsa -pubin -outform der 2>/dev/null | \
                     openssl dgst -sha256 -hex | \
                     sed "s/^.* //"` && \
+    node_name=`curl -s \
+            --retry 10 \
+            --retry-delay 2 \
+            http://169.254.169.254/latest/meta-data/local-hostname` && \
     /usr/bin/kubeadm join \
+      --node-name=$${node_name} \
       --token=$${token} \
       --discovery-token-ca-cert-hash=sha256:$${ca_cert_hash} \
       --ignore-preflight-errors=all \
