--- a/stack/ansible/example/vars.yml
+++ b/stack/ansible/example/vars.yml
@@ -36,3 +36,6 @@ kms_key_alias: alias/cloudboss
 
 # SSH keypair to assign to instances.
 keypair: keights
+
+# CIDR block from which pod IP addresses will be assigned
+pod_cidr: 10.0.0.0/16
