--- a/stack/ansible/keights-stack/requirements.txt
+++ b/stack/ansible/keights-stack/requirements.txt
@@ -1,40 +1,25 @@
-adal==1.1.0
 ansible==2.6.4
 asn1crypto==0.24.0
 awscli==1.16.10
 bcrypt==3.1.4
 boto3==1.9.0
 botocore==1.12.0
-cachetools==2.1.0
-certifi==2018.8.24
 cffi==1.11.5
-chardet==3.0.4
 colorama==0.3.9
 cryptography==2.3.1
-dictdiffer==0.7.1
 docutils==0.14
-google-auth==1.5.1
 idna==2.7
 Jinja2==2.10
 jmespath==0.9.3
-kubernetes==7.0.0
 MarkupSafe==1.0
-oauthlib==2.1.0
-openshift==0.7.2
 paramiko==2.4.1
+pkg-resources==0.0.0
 pyasn1==0.4.4
-pyasn1-modules==0.2.2
 pycparser==2.18
-PyJWT==1.6.4
 PyNaCl==1.2.1
 python-dateutil==2.7.3
-python-string-utils==0.6.0
 PyYAML==3.13
-requests==2.19.1
-requests-oauthlib==1.0.0
 rsa==3.4.2
-ruamel.yaml==0.15.72
 s3transfer==0.1.13
 six==1.11.0
 urllib3==1.23
-websocket-client==0.53.0
