Add Concourse task to build AMI
This also tweaks the Packer build to work in the Concourse task:
* Add user to the Ansible provisioner
* Remove pkg_resources=0.0.0 from requirements.txt
* Remove spot_price_auto_product which was not being used

--- a/ci/pipelines/keights.yml
+++ b/ci/pipelines/keights.yml
@@ -38,3 +38,8 @@ jobs:
     params:
       REPO_SLUG: cloudboss/keights
       GITHUB_TOKEN: ((github-access-token))
+  - task: build-ami
+    file: keights-pr/ci/tasks/build-ami.yml
+    input_mapping:
+      repo: keights-pr
+      version: version-snap
