Add Concourse pipeline
This also tweaks Ansible and the Packer build to work in
the Concourse task:
 * Add `user` to the Packer Ansible provisioner, as it was
   failing without it in the Concourse build container.
 * Remove pkg_resources=0.0.0 from requirements.txt, which fails
   on the official python docker images, used in the build.
 * Remove spot_price_auto_product which was not being used.
 * The `keights-stack` Ansible role can now take a service role
   ARN to be passed to CloudFormation. This is used by the
   pipeline to limit permissions on the worker.

--- a/stack/ansible/keights-stack/tasks/main.yml
+++ b/stack/ansible/keights-stack/tasks/main.yml
@@ -80,6 +80,7 @@
 - name: build common stack
   cloudformation:
     stack_name: '{{ keights_stack.cluster_name }}-common'
+    role_arn: '{{ keights_stack.cfn_role_arn | default(omit) }}'
     template: '{{ role_path }}/files/common.yml'
     template_parameters:
       VpcId: '{{ keights_stack.vpc_id }}'
@@ -99,6 +100,7 @@
 - name: build master stack
   cloudformation:
     stack_name: '{{ keights_stack.cluster_name }}-master'
+    role_arn: '{{ keights_stack.cfn_role_arn | default(omit) }}'
     template: '{{ role_path }}/files/master.yml'
     template_parameters:
       ClusterName: '{{ keights_stack.cluster_name }}'
@@ -139,6 +141,7 @@
 - name: build node stack
   cloudformation:
     stack_name: '{{ keights_stack.cluster_name }}-node-{{ item.name }}'
+    role_arn: '{{ keights_stack.cfn_role_arn | default(omit) }}'
     template: '{{ role_path }}/files/node.yml'
     template_parameters:
       ClusterName: '{{ keights_stack.cluster_name }}'
