--- a/ci/assets/v1.11/cluster/vars.yml
+++ b/ci/assets/v1.11/cluster/vars.yml
@@ -5,7 +5,7 @@ subnet_ids:
   - subnet-674c266b
   - subnet-10cd9e58
   - subnet-cb9c70af
-master_instance_type: t3.medium
+master_instance_type: m3.medium
 keypair: keights
 load_balancer_scheme: internal
 kms_key_id: 714e0cab-0d59-4885-b45b-31d44467fe5c
@@ -22,7 +22,7 @@ node_groups:
   max_instances: 2
   vpc_id: '{{ vpc_id }}'
   subnet_ids: '{{ subnet_ids }}'
-  instance_type: t3.large
+  instance_type: m3.medium
   keypair: '{{ keypair }}'
   ssh_access_cidr: '{{ ssh_access_cidr }}'
   node_labels:
