--- a/ci/assets/v1.11/cluster/vars.yml
+++ b/ci/assets/v1.11/cluster/vars.yml
@@ -2,16 +2,15 @@ vpc_id: vpc-c71371be
 resource_bucket: cloudboss-public
 cfn_role_arn: arn:aws:iam::256008164056:role/keights-cloudformation
 subnet_ids:
-  - subnet-674c266b
-  - subnet-10cd9e58
-  - subnet-cb9c70af
-master_instance_type: t3.medium
+- subnet-37ef771b
+- subnet-10cd9e58
+- subnet-1abe2e40
+master_instance_type: m3.medium
 keypair: keights
 load_balancer_scheme: internal
 kms_key_id: 714e0cab-0d59-4885-b45b-31d44467fe5c
 kms_key_alias: alias/cloudboss
 etcd_volume_size: 10
-etcd_internal_device: /dev/nvme2n1
 pod_cidr: 10.0.0.0/16
 service_cidr: 10.1.0.0/16
 ssh_access_cidr: 172.31.0.0/16
@@ -22,7 +21,7 @@ node_groups:
   max_instances: 2
   vpc_id: '{{ vpc_id }}'
   subnet_ids: '{{ subnet_ids }}'
-  instance_type: t3.large
+  instance_type: m3.medium
   keypair: '{{ keypair }}'
   ssh_access_cidr: '{{ ssh_access_cidr }}'
   node_labels:
