--- a/ci/assets/v1.11/cluster/vars.yml
+++ b/ci/assets/v1.11/cluster/vars.yml
@@ -2,9 +2,9 @@ vpc_id: vpc-c71371be
 resource_bucket: cloudboss-public
 cfn_role_arn: arn:aws:iam::256008164056:role/keights-cloudformation
 subnet_ids:
-  - subnet-674c266b
-  - subnet-10cd9e58
-  - subnet-cb9c70af
+- subnet-37ef771b
+- subnet-10cd9e58
+- subnet-1abe2e40
 master_instance_type: t3.medium
 keypair: keights
 load_balancer_scheme: internal
@@ -22,7 +22,7 @@ node_groups:
   max_instances: 2
   vpc_id: '{{ vpc_id }}'
   subnet_ids: '{{ subnet_ids }}'
-  instance_type: t3.large
+  instance_type: t3.medium
   keypair: '{{ keypair }}'
   ssh_access_cidr: '{{ ssh_access_cidr }}'
   node_labels:
