Add e2e tests to Concourse pipeline
This includes a change to the `keights-system` Ansible role to
wait for the network, otherwise `sonobuoy`, used for running the
e2e tests, can fail to start properly. And because `sonobuoy`
keeps running on exit, the pod does not restart and recover.

This also changes the default cluster domain from `k8s.local` to
`cluster.local`, as setting to anything other than `cluster.local`
causes DNS e2e tests to fail. This may be overridden with Ansible
and CloudFormation parameters.

--- a/ci/assets/v1.10/cluster/playbook.yml
+++ b/ci/assets/v1.10/cluster/playbook.yml
@@ -26,7 +26,7 @@
   - role: keights-system
     keights_system:
       cluster_name: '{{ cluster }}'
-      cluster_apiserver: '{{ master_stack.stack_outputs.LoadBalancerDnsName }}:6443'
+      cluster_apiserver: '{{ master_stack.stack_outputs.LoadBalancerDnsName }}'
       network:
         plugin: calico
         pod_cidr: '{{ pod_cidr }}'
